syntax = "proto3";
package grpcgames;
option go_package = "grpc-example/grpc-games";

message Game {
  string id = 1;
  string name = 2;
  string description = 3;
  string release_year = 4;
  Genre genre = 5;
}

enum Genre {
    ACTION = 0;
    ADVENTURE = 1;
    RPG = 2;
    SHOOTER = 3;
    SIMULATION = 4;
    STRATEGY = 5;
}

message GetGameRequest {
  string name = 1;
}

service GameService {
  rpc GetGame(GetGameRequest) returns (Game) {}
  rpc CreateGame(Game) returns (Game) {}
}